--- a/index.html
+++ b/index.html
@@ -10,54 +10,24 @@
 		<div class="container">
 			<div class="calculator">
 				<div class="display">
-					1+1
 				</div>
 				<div class="buttons">
-					<button>
-						7
-					</button>
-					<button>
-						8
-					</button>
-					<button>
-						9
-					</button>
-					<button>
-						+
-					</button>
-					<button>
-						4
-					</button>
-					<button>
-						5
-					</button>
-					<button>
-						6
-					</button>
-					<button>
-						-
-					</button>
-					<button>
-						1
-					</button>
-					<button>
-						2
-					</button>
-					<button>
-						3
-					</button>
-					<button>
-						*
-					</button>
-					<button>
-						Clear
-					</button>
-					<button>
-						=
-					</button>
-					<button>
-						/
-					</button>
+					<button>7</button>
+					<button>8</button>
+					<button>9</button>
+					<button>+</button>
+					<button>4</button>
+					<button>5</button>
+					<button>6</button>
+					<button>-</button>
+					<button>1</button>
+					<button>2</button>
+					<button>3</button>
+					<button>*</button>
+					<button>0</button>
+					<button>clear</button>
+					<button>=</button>
+					<button>/</button>
 				</div>
 			</div>
 		</div>
